[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/minigames/PromptMinigame.gd" type="Script" id=1]

[node name="PromptMinigame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1152.0
margin_bottom = 700.0
color = Color( 0, 0, 0, 1 )

[node name="Prompt" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 62.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = "sdfgsdfg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mslofdkg" type="Label" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 62.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = "[Y]es or [N]o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakeCmd2" type="Label" parent="."]
margin_left = 8.0
margin_top = 56.0
margin_right = 48.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakeCmd" type="Label" parent="."]
margin_left = 20.0
margin_top = 56.0
margin_right = 60.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = "_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Label" parent="."]
margin_left = 8.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_PromptMinigame_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
